[project]
name = "ytd"
version = "0.1.4"
description = "A CLI tool to download videos and playlists from YouTube."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "structlog>=25.5.0",
    "typer>=0.24.1",
    "yt-dlp>=2026.2.21",
]

[project.scripts]
ytd = "ytd.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
