[project]
name = "ytd"
version = "0.1.6.2"
description = "A CLI tool to download videos and playlists from YouTube."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "structlog>=25.5.0",
    "typer>=0.24.1",
    "yt-dlp>=2026.2.21",
    "yt-dlp-ejs>=0.8.0",
]

[project.scripts]
ytd = "ytd.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
